# bmi-example-agentpy

./: CHANGES.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: format.yml  test.yml
diffusion/: __init__.py  bmi.py  diffusion_model.py  heatmodel.py  io.py  vis.py
examples/: README.md  config-big.yaml  config.yaml  explore-model.ipynb  helpers.py  run-bmi-model.ipynb  run-bmi-model.py  run-model-1.ipynb  run-model-2.ipynb  run-model.ipynb  run-model.py  step-bmi-model.py  step-model.py
tests/: diffusion_model_test.py  heatmodel_test.py  io_test.py  vis_test.py
