[project]
name = "bmi-example-agentpy"
description = "BMI AgentPy example"
version = "0.1.0.dev0"
readme = "README.md"
authors = [
  {name = "Mark Piper"},
  {email = "mark.piper@colorado.edu"},
]
maintainers = [
  {name = "Mark Piper"},
  {email = "mark.piper@colorado.edu"},
  {name = "Eric Hutton"},
  {email = "eric.hutton@colorado.edu"},
  {name = "The CSDMS team"},
  {email = "csdms@colorado.edu"},
]
keywords = [
  "bmi",
  "agentpy",
  "agent-based modeling",
  "component modeling",
  "earth science",
]
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
  "agentpy",
  "bmipy",
  "joblib",
  "matplotlib",
  "networkx",
  "numpy",
  "pandas",
  "pyyaml",
  "SALib",
  "scipy",
]

[project.urls]
Homepage = "https://csdms.colorado.edu"
Documentation = "https://github.com/csdms/bmi-example-agentpy/blob/main/README.md"
Repository = "https://github.com/csdms/bmi-example-agentpy"

[project.optional-dependencies]
dev = [
  "nox",
]
examples = [
  "jupyter",
]
testing = [
  "pytest",
  "pytest-datadir",
  "pytest-cov",
  "coverage",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.zest-releaser]
tag-format = "v{version}"
